# studying_Python

./: .gitignore  README.md  app.sqlite
main/homeworks/: homework_4.py  homework_l2.py  homework_l6.py  homework_l8.py
main/homeworks/homework_l10/: homework_l10.py  task2.txt  text_1.txt  text_2.txt  zametki.txt
main/homeworks/homework_l12/: homework_l12.py
main/homeworks/homework_l14/: homework_l14.py
main/homeworks/homework_l16/: homework_l16.py
main/homeworks/homework_l18/: homework_l18.py
main/homeworks/homework_l20/: homework_l20.py
main/homeworks/homework_l30/: data.pkl  homework_l30.py
main/homeworks/homework_l31/: homework_l31.py
main/homeworks/homework_l32/: class_diagramm.drawio  homework_l32.py
main/homeworks/homework_l34/: controller.py  data.pkl  homework_l34.py  model.py  view.py
main/homeworks/homework_l36/: homework_l36.py
main/homeworks/homework_l38/: homework_l38.py
main/homeworks/homework_l40/: async_example3.py  homework_l41.py
main/homeworks/homework_l41/: homework_l41.sql  homework_l41.txt
main/homeworks/homework_l43/: homework_l43.sql  homework_l43.txt
main/homeworks/homework_l45/: company_db.sql  homework_l45.sql  homework_l45.txt
main/homeworks/homework_l46/: app.sqlite  homework_l46.py  pyproject.toml
main/lessons/: lesson_1.py  lesson_10.py  lesson_11.py  lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  lesson_6.py  lesson_7.py  lesson_8.py  lesson_9.py
main/selfedu/: dicts.py  example.py  libs.py  lists.py  m_datetime.py  practice.py  sets.py  strings.py  tuples.py  work_vith_files.py
(+102 files in other folders)
