[tool.poetry]
name = "homework_l46"
version = "0.1.0"
description = ""
authors = ["EvgeniiMorozov <emorozov1101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.4.22"
mysql-connector = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
